2007-05-09  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Use php_strtok_r instead of strtok_r (Thanks to Daan <daan at parse.nl>)
        * Add fnmatch.c and fnmatch.h and use it on win32 (Thanks to Daan <daan at parse.nl>)
        * Casting of var 'len' to (int) in decode_version() to get rid of an VC++ 6 warning (Thanks to Daan <daan at parse.nl>)

2007-04-21  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Add patch from Nathanael (eaccelerator@polymorpheus.com)

2007-03-07  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Apply the patch from #244 which causes heap corruption.

2007-02-15  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Kick out the old filter implementation and use one based on fnmatch,
          this breaks windows support. The plan is to include a bsd licensed
          fnmatch implementation when a platform doesn't provide fnmatch. 
          (read: when windows is being used). Until some steps up to do this 
          or we run into a machine with windows and VC windows support wil be 
          b0rked.
        * Move spinlock stuff into mm.c, no need for an extra file with extra
          indirection.

2007-02-13  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Added a function to dump an eaccelerator class entry in debug.c
        * Changed include order in mm.c because of eaccelerator.h include in debug.h 
        * Fixed a nullpointer dereference in some special cases in ea_restore.c:509
        * Always compile a ea_debug_error message in ea_restore.c
        * Cleanup: Removed some commented out code, changed some debug statements,
            reordered some conditional includes to reduce ifdef statements
        * Check if those array indices are set before testing them in control.php
        * Revert some changes form changeset @256 to fix bug #199
        * Some more year updates
        * Fix loading of cached scripts and data on disk